// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`legacy session instrumentation compatibility > private sampled session trace seed from historical-eve-0-45-0 > private sampled session trace seed 1`] = `
{
  "migrated": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "private",
      },
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "record",
        "recordInputs": false,
        "recordOutputs": false,
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 1,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "record",
      "recordInputs": false,
      "recordOutputs": false,
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 1,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "rollback": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "private",
      },
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "record",
        "recordInputs": false,
        "recordOutputs": false,
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 1,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "record",
      "recordInputs": false,
      "recordOutputs": false,
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 1,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "source": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "private",
      },
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 1,
      "traceId": "22222222222222222222222222222222",
    },
  },
}
`;

exports[`legacy session instrumentation compatibility > sampled agent trace before session seeds from historical-eve-0-44-4 > sampled agent trace before session seeds 1`] = `
{
  "migrated": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.harness.agentTrace": {
      "actions": {},
      "sessions": {
        "legacy-session": {
          "agentName": "weather",
          "channelAudience": "public",
          "channelKind": "http",
          "context": {
            "isRemote": false,
            "spanId": "1111111111111111",
            "traceFlags": 1,
            "traceId": "22222222222222222222222222222222",
          },
          "rootSessionId": "legacy-session",
        },
      },
      "turns": {},
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "record",
        "recordInputs": true,
        "recordOutputs": true,
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 1,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "record",
      "recordInputs": true,
      "recordOutputs": true,
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 1,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "rollback": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.harness.agentTrace": {
      "actions": {},
      "sessions": {
        "legacy-session": {
          "agentName": "weather",
          "channelAudience": "public",
          "channelKind": "http",
          "context": {
            "isRemote": false,
            "spanId": "1111111111111111",
            "traceFlags": 1,
            "traceId": "22222222222222222222222222222222",
          },
          "rootSessionId": "legacy-session",
        },
      },
      "turns": {},
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "record",
        "recordInputs": true,
        "recordOutputs": true,
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 1,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "record",
      "recordInputs": true,
      "recordOutputs": true,
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 1,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "source": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.harness.agentTrace": {
      "actions": {},
      "sessions": {
        "legacy-session": {
          "agentName": "weather",
          "channelAudience": "public",
          "channelKind": "http",
          "context": {
            "isRemote": false,
            "spanId": "1111111111111111",
            "traceFlags": 1,
            "traceId": "22222222222222222222222222222222",
          },
          "rootSessionId": "legacy-session",
          "turnsInWindow": 7,
          "window": 0,
        },
      },
      "turns": {},
    },
  },
}
`;

exports[`legacy session instrumentation compatibility > sampled session trace seed from historical-eve-0-45-0 > sampled session trace seed 1`] = `
{
  "migrated": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "record",
        "recordInputs": true,
        "recordOutputs": true,
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 1,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "record",
      "recordInputs": true,
      "recordOutputs": true,
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 1,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "rollback": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "record",
        "recordInputs": true,
        "recordOutputs": true,
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 1,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "record",
      "recordInputs": true,
      "recordOutputs": true,
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 1,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "source": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 1,
      "traceId": "22222222222222222222222222222222",
    },
  },
}
`;

exports[`legacy session instrumentation compatibility > unsampled agent trace before session seeds from historical-eve-0-44-4 > unsampled agent trace before session seeds 1`] = `
{
  "migrated": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.harness.agentTrace": {
      "actions": {},
      "sessions": {
        "legacy-session": {
          "agentName": "weather",
          "channelAudience": "public",
          "channelKind": "http",
          "context": {
            "isRemote": false,
            "spanId": "1111111111111111",
            "traceFlags": 0,
            "traceId": "22222222222222222222222222222222",
          },
          "rootSessionId": "legacy-session",
        },
      },
      "turns": {},
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "drop",
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 0,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "drop",
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 0,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "rollback": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.harness.agentTrace": {
      "actions": {},
      "sessions": {
        "legacy-session": {
          "agentName": "weather",
          "channelAudience": "public",
          "channelKind": "http",
          "context": {
            "isRemote": false,
            "spanId": "1111111111111111",
            "traceFlags": 0,
            "traceId": "22222222222222222222222222222222",
          },
          "rootSessionId": "legacy-session",
        },
      },
      "turns": {},
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "drop",
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 0,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "drop",
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 0,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "source": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.harness.agentTrace": {
      "actions": {},
      "sessions": {
        "legacy-session": {
          "agentName": "weather",
          "channelAudience": "public",
          "channelKind": "http",
          "context": {
            "isRemote": false,
            "spanId": "1111111111111111",
            "traceFlags": 0,
            "traceId": "22222222222222222222222222222222",
          },
          "rootSessionId": "legacy-session",
          "turnsInWindow": 7,
          "window": 0,
        },
      },
      "turns": {},
    },
  },
}
`;

exports[`legacy session instrumentation compatibility > unsampled session trace seed from historical-eve-0-45-0 > unsampled session trace seed 1`] = `
{
  "migrated": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "drop",
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 0,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "drop",
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 0,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "rollback": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionInstrumentation": {
      "decision": {
        "action": "drop",
      },
      "otelTraceEnabled": true,
      "schemaVersion": 1,
      "traceSeed": {
        "spanId": "1111111111111111",
        "traceFlags": 0,
        "traceId": "22222222222222222222222222222222",
      },
    },
    "eve.sessionInstrumentationDecision": {
      "action": "drop",
    },
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 0,
      "traceId": "22222222222222222222222222222222",
    },
  },
  "source": {
    "eve.channelInstrumentation": {
      "channelType": "http",
      "kind": "channel:http",
      "metadata": {
        "audience": "public",
      },
    },
    "eve.otelTraceEnabled": true,
    "eve.sessionTraceSeed": {
      "spanId": "1111111111111111",
      "traceFlags": 0,
      "traceId": "22222222222222222222222222222222",
    },
  },
}
`;
